--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Inverse Covariance Clustering on Implied Stochastic Volatility Models"
+title: "Regime-based Implied Stochastic Volatility Model for Crypto Option Pricing"
 author: "Saef, Danial; Wang, Yuanrong; Aste, Tomaso"
 date: "07/09/2022"
 output:
@@ -12,7 +12,7 @@ bibliography: iccisvm.bib
 knitr::opts_chunk$set(echo = TRUE, eval = FALSE, cache.lazy = FALSE)
 ```
 
-This library serves as a companion to the publication "Clustering the implied volatility surface of Bitcoin options over time". However it can also be used independently for clustering high dimensional datasets and fitting an implied stochastic volatility model.
+This library serves as a companion to the publication "Regime-based Implied Stochastic Volatility Model for Crypto Option Pricing". However it can also be used independently for clustering high dimensional datasets and fitting an implied stochastic volatility model.
 
 # Methodology
 
